RESOLVED FIXED114462
Cannot scroll to footer on a page with overflow:hidden on the body
https://bugs.webkit.org/show_bug.cgi?id=114462
Summary Cannot scroll to footer on a page with overflow:hidden on the body
Beth Dakin
Reported 2013-04-11 13:45:30 PDT
If a WKView has a header/footer, you cannot scroll to the footer if the page has overflow:hidden on the body. <rdar://problem/13530042>
Attachments
Patch (1.89 KB, patch)
2013-04-11 13:51 PDT, Beth Dakin
simon.fraser: review+
Beth Dakin
Comment 1 2013-04-11 13:51:30 PDT
Simon Fraser (smfr)
Comment 2 2013-04-11 13:56:26 PDT
Comment on attachment 197668 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=197668&action=review > Source/WebCore/page/FrameView.cpp:614 > + || (m_frame->page() && m_frame->page()->mainFrame() == m_frame && (headerHeight() || footerHeight())); Why don't we have Frame::isMainFrame()? :(
Beth Dakin
Comment 3 2013-04-11 14:00:17 PDT
(In reply to comment #2) > (From update of attachment 197668 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=197668&action=review > > > Source/WebCore/page/FrameView.cpp:614 > > + || (m_frame->page() && m_frame->page()->mainFrame() == m_frame && (headerHeight() || footerHeight())); > > Why don't we have Frame::isMainFrame()? :( We REALLY should add this. http://trac.webkit.org/changeset/148234
Note You need to log in before you can comment on or make changes to this bug.