Cannot scroll to footer on a page with overflow:hidden on the body https://bugs.webkit.org/show_bug.cgi?id=114462 -and corresponding- <rdar://problem/13530042>

Reviewed by Simon Fraser.

Add a new scenario in which we want to overrideHidden -- whenever we are the
mainFrame and there is a header or footer.

* page/FrameView.cpp:
(WebCore::FrameView::applyOverflowToViewport):



Canonical link: https://commits.webkit.org/132847@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148234 268f45cc-cd09-0410-ab3c-d52691b4dbfc